# fashion-pose-dynamics

./: __main__.py  fashion_pose_mcp.py  pyproject.toml
data/: head_positions.json  lighting_types.json  pose_catalog.json  visual_vocabulary.json
layers/: computation.py  synthesis.py  taxonomy.py
tests/: test_all.py
utils/: __init__.py  coordinates.py  keyword_index.py
