[project]
name = "fashion-pose-dynamics"
version = "0.1.0"
description = "Fashion pose taxonomy with body surface geometry and compositional computation"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
fashion-pose-dynamics = "fashion_pose_mcp:mcp"
